syntax="proto3";

package tts;

message Bucket {
	float upper_boundary = 1;
	int64 sample_count = 2;
}

message Histogram {
	repeated Bucket buckets = 1;
}

message NumericStats {
	float min = 1;
	float max = 2;
	float mean = 3;
	float std = 4;
	Histogram histogram = 5;
}

message IntFixedLenColumn {
	string name = 1;
	int64 size = 2;
	NumericStats stats = 3;
}

message IntVarLenColumn {
	string name = 1;
}

message FloatFixedLenColumn {
	string name = 1;
	int64 size = 2;
	NumericStats stats = 3;
}

message FloatVarLenColumn {
	string name = 1;
}

enum CombinerType {
	COMBINER_TYPE_UNKNOWN = 0;
	COMBINER_TYPE_MEAN = 1;
	COMBINER_TYPE_SQRT = 2;
	COMBINER_TYPE_SUM = 3;
}

enum DataType {
	DATA_TYPE_UNKNOWN = 0;
	DATA_TYPE_INT32 = 1;
	DATA_TYPE_INT64 = 2;
	DATA_TYPE_FLOAT32 = 3;
	DATA_TYPE_FLOAT64 = 4;
}

message IntegerizedSparseColumn {
	string name = 1;
	int64 bucket_size = 2;
	CombinerType combiner_type = 3;
	DataType data_type = 4;
}


message HashBucketSparseColumn {
	string name = 1;
	int64 hash_bucket_size = 2;
	CombinerType combiner_tye = 3;
	DataType data_type = 4;
}

// Converts real valued features to integer features.
// The bucketizing boundaries are found in the stats
// of the source column.
message BucketizedColumn {
	string source_column_name = 1;
}

message OneHotColumn {
	// source column is sparse column.
	string source_column_name = 1;
}

message EmbeddingColumn {
	string source_column_name = 1;
	int64 dimension = 2;
	CombinerType combiner_type = 3;
}


